--- a/latest/index.html
+++ b/latest/index.html
@@ -1,4 +1,10 @@
 ---
 layout: latest
 title: Latest news from home
+pagination: 
+  enabled: true
+  per_page: 10
+  permalink: '/page:num/'
+  sort_field: 'date'
+  sort_reverse: true
 ---
